--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ server.port=7000
 spring.application.name=kafka-consumer
 spring.kafka.bootstrap-servers=localhost:9192,localhost:9193,localhost:9194,localhost:9195
 spring.kafka.topics.satellite=aisawan-topic
-spring.kafka.consumer.group-id=group_id
+spring.kafka.consumer.group-id=group_sat
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.isolation-level=read_committed
 
 spring.datasource.url=jdbc:postgresql://localhost:5444/kari?currentSchema=kari
 spring.datasource.username=root1
